--- a/Login.css
+++ b/Login.css
@@ -1,21 +1,21 @@
 body{
-	font-family: 'Poppins', sans-serif;
-	background: #e6e6e6;
+  font-family: 'Poppins', sans-serif;
+  background: #e6e6e6;
 }
 p{
-	font-family: 'Poppins', sans-serif;
-	font-size: 1.1em;
-	font-weight: 300;
-	line-height: 1.7em;
-	color: #999;
-	margin-bottom:0px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 1.7em;
+  color: #999;
+  margin-bottom:0px;
 }
 a,
 a:hover,
 a:focus{
-	color: inherit;
-	text-decoration: none;
-	transition: all 0.3s;
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 /* Side Bar*/
@@ -26,72 +26,72 @@ a:focus{
     margin-left: -250px;
 }
 .wrapper{
-	display: flex;
-	text-decoration: none;
-	transition: all 0.3s;
+  display: flex;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 #sidebar{
-	min-width: 250px;
-	max-width: 250px;
-	background: #7386D5;
-	color: #fff;
-	transition: all 0.3s;
+  min-width: 250px;
+  max-width: 250px;
+  background: #7386D5;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 
 #sidebar .sidebar-header{
-	padding: 20px;
-	background: #6d7fcc;
+  padding: 20px;
+  background: #6d7fcc;
 }
 #sidebar ul.components{
-	padding: 20px 0;
-	border-bottom: 1px solid #47748b;
+  padding: 20px 0;
+  border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul p{
-	color: #fff;
-	padding: 10px;
+  color: #fff;
+  padding: 10px;
 }
 
 #sidebar ul li a{
-	padding: 10px;
-	font-size: 1.1em;
-	display: block;
+  padding: 10px;
+  font-size: 1.1em;
+  display: block;
 }
 
 #sidebar ul li a:hover{
-	color: #7386D5;
-	background: #fff;
+  color: #7386D5;
+  background: #fff;
 }
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-	color: #fff;
-	background: #6d7fcc;
+  color: #fff;
+  background: #6d7fcc;
 }
 
 a[data-toggle="collapse"]{
-	position: relative;
+  position: relative;
 }
 
 .dropdown-toggle::after{
-	display: block;
-	position: absolute;
-	top: 50%;
-	right: 20%;
-	transform: translateY(-50%);
-}9
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  transform: translateY(-50%);
+}
 ul ul a{
-	font-size: 0.9em !important;
-	padding-left: 30px !important;
-	background: #6d7fcc;
+  font-size: 0.9em !important;
+  padding-left: 30px !important;
+  background: #6d7fcc;
 }
 
 #content{
-	width: 100%;
-	padding: 0px;
-	min-height: 100vh;
-	transition: all 0.3s;
+  width: 100%;
+  padding: 0px;
+  min-height: 100vh;
+  transition: all 0.3s;
 }
 
 
@@ -115,27 +115,22 @@ position:relative;*/
 color:white;
 }
 
-.navbar-header{
-   vertical-align: middle;
-  display: inline-block;
-}
-.navbar-collapse{
- vertical-align: middle;
-display: inline-block;
-}
-.top-left{
-  transform: translate(1130px,-40px);
-  
-  
-}
+
 .dropdown-menu a:hover{
   text-decoration: none;
   background-color: grey;
 }
 
+.forms{
+
+  display: flex;
+align-items: center;
+justify-content: center;
+}
+
 .loginbox{
   background-color:white;
-  width: 80%;
+  width: 50%;
   color:white;
   border-radius:5px;
   margin:100px;
@@ -146,7 +141,7 @@ display: inline-block;
  
   font-size:20px;
   background-color: #F0F0F0;
-  color:black	;
+  color:black ;
   padding:30px;
   letter-spacing: 1.5px;
   
@@ -189,4 +184,3 @@ input{
   
   margin-bottom: 20px;
 }
-
